force-app/main/default/objects/AssessmentTemplate__c/AssessmentTemplate__c.object-meta.xml
<CustomObject>
    <label>Assessment Template</label>
    <nameField>
        <label>Assessment Template Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>