force-app/main/default/objects/AssessmentTemplate__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Instructions</label>
    <type>Checkbox</type>
</CustomField>