force-app/main/default/objects/AssessmentTemplate__c/fields/RandomizeQuestions__c.field-meta.xml
<CustomField>
    <fullName>RandomizeQuestions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Randomize Questions</label>
    <type>Checkbox</type>
</CustomField>