force-app/main/default/objects/AssessmentTemplate__c/fields/ShowResultsImmediately__c.field-meta.xml
<CustomField>
    <fullName>ShowResultsImmediately__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Results Immediately</label>
    <type>Checkbox</type>
</CustomField>