force-app/main/default/objects/AssessmentTemplate__c/fields/TemplateNumber__c.field-meta.xml
<CustomField>
    <fullName>TemplateNumber__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Template Number</label>
    <type>AutoNumber</type>
</CustomField>